--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<meta property="og:title" content="BC Pressure Washing | Window & Exterior Cleaning Services">
+<meta property="og:description" content="Professional pressure washing, window cleaning, gutter cleaning, and more across White Rock, Surrey, and the Greater Vancouver area.">
+<meta property="og:image" content="https://www.bcpressurewashing.ca/open.png">
+<meta property="og:url" content="https://www.bcpressurewashing.ca">
+<meta property="og:type" content="website">
+
+<meta property="og:title" content="BC Pressure Washing | Exterior Cleaning Services" />
+<meta property="og:description" content="Professional pressure washing, window cleaning, gutter cleaning & roof cleaning in BC. Call now for a quote!" />
+<meta property="og:image" content="/open.png" />
+<meta property="og:url" content="https://bcpressurewashing.ca/" />
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BC Pressure Washing - #1 Pressure Washing & Window Cleaning Services in Surrey, White Rock & Metro Vancouver</title>
@@ -186,3 +199,68 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "BC Pressure Washing",
+  ...
+}
+</script>
+
+<!-- Service Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Pressure Washing",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "BC Pressure Washing",
+    "url": "https://www.bcpressurewashing.ca"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "White Rock, Surrey, Abbotsford, Mission, Maple Ridge, Chilliwack, Burnaby, Delta, Vancouver, North Vancouver"
+  },
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Exterior Cleaning Services",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Window Cleaning",
+          "description": "Interior and exterior residential and commercial window cleaning services."
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Gutter Cleaning",
+          "description": "Full gutter debris removal, flushing, and downspout check."
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Roof Cleaning",
+          "description": "Moss removal and soft washing for asphalt and tile roofs."
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Driveway Cleaning",
+          "description": "High-pressure washing for concrete, asphalt, and pavers."
+        }
+      }
+    ]
+  }
+}
+</script>
