--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <meta property="og:url" content="https://bcpressurewashing.ca/" />
     <meta property="og:title" content="BC Pressure Washing - #1 Cleaning Services in Surrey & White Rock" />
     <meta property="og:description" content="Professional pressure washing, window cleaning, roof cleaning and gutter cleaning services. Free quotes and satisfaction guaranteed!" />
-    <meta property="og:image" content="https://bcpressurewashing.ca/lovable-uploads/9fd8e651-7601-4cbe-8e73-c48efe84a1fa.png" />
+    <meta property="og:image" content="https://bcpressurewashing.ca/open.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
