--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://bcpressurewashing.ca/" />
   <meta property="og:title" content="BC Pressure Washing - #1 Pressure Washing & Window Cleaning" />
   <meta property="og:description" content="Professional pressure washing, window cleaning, roof cleaning and gutter cleaning services. Free quotes and satisfaction guaranteed!" />
-  <meta property="og:image" content="https://bcpressurewashing.ca/open.png" />
+  <meta property="og:image" content="https://bcpressurewashing.ca/open.png?v=1" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
