--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://bcpressurewashing.ca/" />
   <meta property="og:title" content="BC Pressure Washing - #1 Pressure Washing & Window Cleaning" />
   <meta property="og:description" content="Professional pressure washing, window cleaning, roof cleaning and gutter cleaning services. Free quotes and satisfaction guaranteed!" />
-  <meta property="og:image" content="https://bcpressurewashing.ca/open.png?v=1" />
+  <meta property="og:image" content="https://bcpressurewashing.ca/bcpressurewashing-og-banner.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -24,7 +24,7 @@
   <meta name="twitter:url" content="https://bcpressurewashing.ca/" />
   <meta name="twitter:title" content="BC Pressure Washing - #1 Pressure Washing & Window Cleaning" />
   <meta name="twitter:description" content="Professional pressure washing, window cleaning, roof cleaning and gutter cleaning services. Free quotes and satisfaction guaranteed!" />
-  <meta name="twitter:image" content="https://bcpressurewashing.ca/open.png" />
+  <meta name="twitter:image" content="https://bcpressurewashing.ca/bcpressurewashing-og-banner.png" />
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRJTBVTJ2N"></script>
