--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) for GA4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XTJFNK4L59"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){ dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'G-XTJFNK4L59');
+</script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/lovable-uploads/6068ea75-d3bc-4895-a1c8-9404365843b0.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
