--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,8 +26,28 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="app"><!-- Your site content gets injected here --></div>
+
+    <!-- Custom script to track Lovable AI form submissions -->
+    <script>
+      const observer = new MutationObserver((mutations) => {
+        for (const mutation of mutations) {
+          for (const node of mutation.addedNodes) {
+            if (node.nodeType === 1) { // Only look at element nodes
+              const text = node.textContent?.toLowerCase();
+              if (text && (text.includes('thank you') || text.includes('submitted'))) {
+                gtag('event', 'form_submission', {
+                  event_category: 'Form',
+                  event_label: 'Lovable AI Form',
+                  value: 1
+                });
+              }
+            }
+          }
+        }
+      });
+
+      observer.observe(document.body, { childList: true, subtree: true });
+    </script>
   </body>
 </html>
