--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
 
       observer.observe(document.body, { childList: true, subtree: true });
     </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
