--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 
       observer.observe(document.body, { childList: true, subtree: true });
     </script>
-    <script type="module" src="/src/main.jsx"></script>
+   <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
